--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -97,6 +97,9 @@ server {
 
         # begin redirect rewrites: for cases where a more powerful regexp match-and-replace is required
 
+        ## experiment with stripping query parameters '?foo' completely in general:
+        rewrite ^/(?<old>[a-rt-z][a-su-z][b-z][a-su-z][a-hj-z][a-bd-z].*)\?.*$ /$old permanent; # exclude /static/ because of file versioning
+
         rewrite ^/static/css/fonts\.css(?<version>\?v=[0-9]+)$ /static/css/fonts-VERSIONED.css$version permanent;
 
         rewrite ^/docs/(?<old>.*)$ /doc/$old permanent;
@@ -127,9 +130,6 @@ server {
         ## replace all spaces with hyphens:
         rewrite ^(.*)(\s|%20)(.*)$ $1-$3 permanent;
         ## fix a bunch of very obxious crawlers:
-        rewrite ^/(?<original>.*)\?revision\=.*$ /$original permanent;
-        rewrite ^/(?<original>.*)\?chat$ /$original permanent;
-        rewrite ^/(?<original>.*)\?feedback.*$ /$original permanent;
         rewrite ^/100-y/ALL/score/1/(?<original>.*) /$original permanent;
         rewrite ^/2017/11/20/(?<original>.*) /$original permanent;
         rewrite ^/BINARY/(?<original>.*) /$original permanent;
@@ -349,7 +349,6 @@ server {
         rewrite ^/\%26amp\;.*quot\;.*/(?<original>.*) /$original permanent;
         rewrite ^/(?<original>.*)\&quot$ /$original permanent;
         rewrite ^/(?<original>.*)\&[a-z][a-z]=.*$ /$original permanent;
-        rewrite ^/(?<original>.*)\?[0-9]$ /$original permanent;
         rewrite ^/(?<original>.*)\.pag$ /$original.page permanent;
         rewrite ^/\.\/doc/(?<original>.*) /$original permanent;
         rewrite ^/(?<original>.*)\=$ /$original permanent;
@@ -379,7 +378,6 @@ server {
         rewrite ^/GPT-2-Folk-Music-\%C2\%B7-Gwern\.net_files/(?<original>.*) /doc/ai/music/$original permanent;
         rewrite ^/(?<original1>.*)/%E2%80%8B(?<original2>.*)$ /$original1/$original2 permanent;
         rewrite ^/(?<original1>.*)%E2%80%8B(?<original2>.*)$ /$original1$original2 permanent;
-        rewrite ^/(?<original>.*)jpg\?fill\=solid$ /$original permanent;
         rewrite ^/index/(?<original>.*)$ /$original permanent;
         rewrite ^/(?<original>.*)\~$ /$original permanent;
         rewrite ^/(?<original>.*)\:$ /$original permanent;
@@ -392,7 +390,6 @@ server {
         rewrite ^/(?<original>.*)\.tmp$ /$original permanent;
         rewrite ^/(?<original>.*)\.pd\/f$ /$original.pdf permanent;
         rewrite ^/(?<original>.*)https:\/\/www\.gwern\.net\/.*$ /$original permanent;
-        rewrite ^/(?<original>.*)\?fbclid\=.*$ /$original permanent;
         rewrite ^/(?<original>.*)&imgrefurl.*$ /$original permanent;
         rewrite ^/(?<original>.*)\]$ /$original permanent;
         rewrite ^/(?<original>.*)\<.*$ /$original permanent;
@@ -413,25 +410,19 @@ server {
         rewrite ^/(?<original>.*)\&lang=en$ /$original permanent;
         rewrite ^/(?<original>.*)\&sa=.*$ /$original permanent;
         rewrite ^/doc/eva/doc/eva/(?<original>.*)$ /doc/eva/$original permanent;
-        rewrite ^/(?<original>.*)\?utm_.*$ /$original permanent;
         rewrite ^/(?<original>.*)\&lang=en$ /$original permanent;
-        rewrite ^/(?<original>.*)\?revision=.*$ /$original permanent;
         rewrite ^/image%25252F(?<original>.*)$ /images/$original permanent;
         rewrite ^/image%25252Fthumbnails%25252Fwikipedia%25252F(?<original>.*)$ /images/thumbnails/wikipedia/$original permanent;
-        rewrite ^/(?<original>.*)\?amp\;\?amp\;.*$ /$original permanent;
         rewrite ^/(?<original>doc/.*\.pdf)The$ /$original permanent;
         rewrite ^/(?<original>.*)\&spec\=ft100x75$ /$original permanent;
         rewrite ^/(?<original>.*)\'A\=0$ /$original permanent;
-        rewrite ^/(?<original>.*)\?usg=.*$ /$original permanent;
         rewrite ^/(?<original>.*)\&usg=.*$ /$original permanent;
         rewrite ^/(?<original>.*)\&$ /$original permanent;
         rewrite ^/(?<original>.*)\+\&cd\=.*$ /$original permanent;
         rewrite ^/(?<original>.*)\&ved\=.*$ /$original permanent;
         rewrite ^/(?<original>.*)\&xid\=.*$ /$original permanent;
         rewrite ^/(?<original>.*)\&fbid.*$ /$original permanent;
-        rewrite ^/(?<original>.*)\?fbid.*$ /$original permanent;
         rewrite ^/(?<original>.*)\&fbclid.*$ /$original permanent;
-        rewrite ^/(?<original>.*)\?fbclid.*$ /$original permanent;
         rewrite ^/(?<original>.*)\&key=.*$ /$original permanent;
         rewrite ^/(?<original>.*)\&id\=.*$ /$original permanent;
         rewrite ^/(?<original>.*)\%E2\%80\%99$ /$original permanent;
@@ -640,7 +631,6 @@ server {
         rewrite ^/(?<original>doc/.*/)\&quot.* /$original/index permanent;
         rewrite ^/backlinks/(?<original>.*) /metadata/annotations/backlink/$original permanent;
         rewrite ^/(?<original1>.*)\'.*(?<original2>.*)$ /$original1-$original2 permanent; # ' → -
-        rewrite ^/(?<original>.*)\?revision=.*$ /$original permanent;
         rewrite ^/(?<original>.*)\&amp\;.*$ /$original permanent;
         rewrite ^/(?<original>doc/.*/.*\.pdf)-.*$ /$original permanent; # deal with all the erroneous PDF links like '/doc/iq/2018-warne.pdf-en-espanol'
         rewrite ^/(?<original>doc/.*/.*\.pdf)[A-Z][a-z]+$ /$original permanent; # '/doc/psychology/writing/1993-ericsson.pdfEriksson'
@@ -682,9 +672,6 @@ server {
         rewrite ^/metadata/annotations/similar/(?<original>.*)$ /metadata/annotation/similar/$original permanent;
         rewrite ^/doc/psycology/(?<original>.*)$ /doc/psychology/$original permanent;
         rewrite ^/doc/www/pkhungurn\.github\.io/data/videos/(?<original>.*)$ https://pkhungurn.github.io/data/videos/$original permanent;
-        rewrite ^(?<original>.*)\?.*callback=.*from=.*$ /$original permanent;
-        rewrite ^(?<original>.*)\?service=.*$ /$original permanent;
-        rewrite ^(?<original>.*)\?relatedposts_hit=.*$ /$original permanent;
         rewrite ^/(?<original>doc/.*),pdf$ /$original.pdf permanent;
         rewrite ^/(?<original>.*)%C3%A7$ /$original permanent;
         rewrite ^/(?<original>.*)/index/index$ /$original/index permanent;
