--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -141,7 +141,7 @@
 "~^/Conscientiousness-and-online-education%23external-links$" "/conscientiousness-and-online-education#external-links";
 "~^/Conscientiousness-and-online-education%23fnref1$" "/conscientiousness-and-online-education#fnref1";
 "~^/console\/$" "/console-insurance";
-"~^/Console%20Insurance$" "/console-Insurance";
+"~^/Console%20Insurance$" "/console-insurance";
 "~^/conversations/topic/LIFE/index.html.*$" "/conversations/topic/LIFE";
 "~^/copy$" "/copyright";
 "~^/Corelation$" "/correlation";
@@ -9667,7 +9667,7 @@
 "~^/doc/sr/2015-02-22-agora-fremblingdocket.maff.*$" "/doc/darknet-market/agora/2015-02-22-agora-fremblingdocket.maff";
 "~^/doc/sr/2015-frembling-caed-03307884002.pdf.*$" "/doc/darknet-market/agora/2015-frembling-caed-03307884002.pdf";
 "~^/doc/statistics/1987-ayton.pdf.*$" "/doc/statistics/bayes/1987-ayton.pdf";
-"~^/doc/statistics/decision/1994-benter$" "/doc/statistics/decision/1994-benter";
+"~^/doc/statistics/decision/1994-benter$" "/doc/statistics/decision/1994-benter.pdf";
 "~^/doc/.*/docs/bitcoin/2014-mccaleb.*$" "/docs/bitcoin/2014-mccaleb";
 "~^/fiction/clippy/\*\*.*$" "fiction/clippy";
 "~^/mead$" "/review/mead";
@@ -10113,6 +10113,40 @@
 "~^/doc/1957-shockley.pdf.*$" "/doc/iq/ses/1957-shockley.pdf";
 "~^/doc/ai/2020-brown.pdf.*$" "https://arxiv.org/abs/2005.14165#openai";
 "~^/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158$" "/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf";
+"~^/static/img/icon/arrow-up.svg.*$" "/static/img/icon/arrow-up.svg";
+"~^/DNM-archive.*$" "/dnm-archive";
+"~^/changelog\.rss.*$" "https://gwern.substack.com/feed";
+"~^/changelog/rss.*$" "https://gwern.substack.com/feed";
+"~^/DALLE-demos$" "https://openai.com/blog/dall-e/";
+"~^/DALLE$" "https://openai.com/blog/dall-e/";
+"~^/DALLE-2$" "https://openai.com/dall-e-2/";
+"~^/[Rr]italin.*$" "https://en.wikipedia.org/wiki/Ritalin";
+"~^/gpt-3-%C3%A4.*$" "/gpt-3";
+"~^/gpt-3-art.*$" "/gpt-3-nonfiction#ascii-art";
+"~^/doc/zeo/2009-zeo-steve-sleepforgetting$" "/doc/zeo/2009-zeo-steve-sleepforgetting.html";
+"~^/doc/statistics/2008-kesselman.pdf.*$" "/doc/statistics/bayes/2008-kesselman.pdf";
+"~^/doc/genetics/heritable/1966-heston.pdf%5C.*$" "/doc/genetics/heritable/1966-heston.pdf";
+"~^/doc/genetics/heritable/1960-fuller-behaviorgenetics.pdf%5C.*$" "/doc/genetics/heritable/1960-fuller-behaviorgenetics.pdf";
+"~^/doc/dnb/2013-couzinfrankel.pdf.*$" "/doc/statistics/meta-analysis/2013-couzinfrankel.pdf";
+"~^/doc/2013-elpus.pdf.*$" "/doc/dual-n-back/2013-elpus.pdf";
+"~^/doc/2005-wu.pdf.*$" "/doc/economics/2005-wu.pdf";
+"~^/doc/1996-bergmann.pdf.*$" "/doc/algernon/1996-bergmann.pdf";
+"~^/doc/1995-rechtschaffen.pdf.*$" "/doc/algernon/1995-rechtschaffen.pdf";
+"~^/doc/1978-fischhoff.pdf.*$" "/doc/statistics/prediction/1978-fischhoff.pdf";
+"~^/dnm-archives.page.*$" "/dnm-archive.page";
+"~^/Death-Note-ending.*$" "/death-note-ending";
+"~^/Complement.*$" "/complement";
+"~^/alignment-newsletter.*$" "https://rohinshah.com/alignment-newsletter/";
+"~^/security.txt.*$" "/me#contact";
+"~^/dnb$" "/dnb-faq";
+"~^/doc/modafinil/1993-jarvis.pdf.*$" "/doc/nootropic/caffeine/1993-jarvis.pdf";
+"~^/doc/sociol$" "/doc/sociology/index";
+"~^/GANverse3.*$" "/face";
+"~^/GPT-3）.*$" "/gpt-3";
+"~^/LW2$" "https://www.lesswrong.com/";
+"~^/self-decrypting-file.*$" "/self-decrypting";
+"~^/static/templates$" "/static/template/";
+"~^/doc/1980-smith.pdf.*$" "/doc/genetics/heritable/correlation/1980-smith.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -11497,12 +11531,6 @@
 "~^/configuration.php.*$" "/static/404";
 "~^/conn.php.bak.*$" "/static/404";
 "~^/connected/.*$" "/static/404";
-"~^/console/.*$" "/static/404";
-"~^/console/.*$" "/static/404";
-"~^/console/.*$" "/static/404";
-"~^/console/.*$" "/static/404";
-"~^/console/.*$" "/static/404";
-"~^/console/.*$" "/static/404";
 "~^/console/.*$" "/static/404";
 "~^/content-functions.php.*$" "/static/404";
 "~^/content-post..*$" "/static/404";
@@ -15020,7 +15048,7 @@
 "~^/[\.a-z0-9-]+\.pl" "/static/404";
 "~^/[\.a-z0-9-]+\.jsp" "/static/404";
 "~^/[\.a-z0-9-]+\.php" "/static/404";
-"~^/[\.a-z0-9-]+\.xml" "/static/404";
+"~^/[\.a-rtz0-9-]+\.xml" "/static/404"; # WARNING: exclude /sitemap.xml!
 "~^/.*pubpress.net%E2%80%99.*$" "/static/404";
 "~^/.*%7Burl%7D.*$" "/static/404";
 "~^/.*\)\.concat\.*$" "/static/404";
@@ -15204,7 +15232,6 @@
 "~^/.*/%22https://www.youtube.com/watch\?v=.*$"  "/static/404";
 "~^/.*/tiki-ajax_services.*$"  "/static/404";
 "~^/+CSCOT+/.*$"  "/static/404";
-"~^/console.*$"  "/static/404";
 "~^/concat?/.*$"  "/static/404";
 "~^/cloudexp/.*$"  "/static/404";
 "~^/ccversion/.*$"  "/static/404";
@@ -15293,6 +15320,16 @@
 "~^/cb\=[0-9]+.*$"  "/static/404";
 "~^/careers_search_index.*$"  "/static/404";
 "~^/.*bokepdella.*$"  "/static/404";
+"~^/shouldnotexist.txt.*$"  "/static/404";
+"~^/console$"  "/static/404";
+"~^/qTc4.*$"  "/static/404";
+"~^/oFr5.*$"  "/static/404";
+"~^/names.nsf/.*$"  "/static/404";
+"~^/lMp4.*$"  "/static/404";
+"~^/jablex.com/.*$"  "/static/404";
+"~^/Idx8.*$"  "/static/404";
+"~^/ggongbak.com.*$"  "/static/404";
+"~^/176.9.41.242:873.*$"  "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
