--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -10113,7 +10113,6 @@
 "~^/doc/1957-shockley.pdf.*$" "/doc/iq/ses/1957-shockley.pdf";
 "~^/doc/ai/2020-brown.pdf.*$" "https://arxiv.org/abs/2005.14165#openai";
 "~^/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158$" "/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf";
-"~^/static/img/icon/arrow-up.svg.*$" "/static/img/icon/arrow-up.svg";
 "~^/DNM-archive.*$" "/dnm-archive";
 "~^/changelog\.rss.*$" "https://gwern.substack.com/feed";
 "~^/changelog/rss.*$" "https://gwern.substack.com/feed";
@@ -10147,6 +10146,32 @@
 "~^/self-decrypting-file.*$" "/self-decrypting";
 "~^/static/templates$" "/static/template/";
 "~^/doc/1980-smith.pdf.*$" "/doc/genetics/heritable/correlation/1980-smith.pdf";
+"~^/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf．.*$" "/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf";
+"~^/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638$" "/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf";
+"~^/doc/1993-friedman.pdf.*$" "/doc/psychology/personality/conscientiousness/1993-friedman.pdf";
+"~^/doc/genetics/2016-simonti.pdf.*$" "/doc/genetics/selection/2016-simonti.pdf";
+"~^/gpt-3-fiction.*$" "/gpt-3";
+"~^/GPT-3-image-generation.*$" "/dall-e";
+"~^/GPT-3）.*$" "/gpt-3";
+"~^/doc/1994-graesser.pdf.*$" "/doc/psychology/spaced-repetition/1994-graesser.pdf";
+"~^/doc/dnb/1952-freeburne.pdf.*$" "/doc/music/music-distraction/1952-freeburne.pdf";
+"~^/Variable$" "/variable";
+"~^/Silk-Road4.*$" "/silk-road#fn4";
+"~^/mlp$" "/review/mlp";
+"~^/Girl-Scouts-and-good$" "/girl-scouts";
+"~^/doc/statistics/decision/1957-bellman-dynamicprogramming.generalised.*$" "/doc/statistics/decision/1957-bellman-dynamicprogramming.pdf";
+"~^/doc/iq/2016-du$" "/doc/iq/2016-dutton.pdf";
+"~^/doc/dnb/2008-whiteside.pdf.*$" "/doc/statistics/meta-analysis/2008-whiteside.pdf";
+"~^/doc/cat/psychology/2020-kay$" "/doc/cat/psychology/2020-kays.pdf";
+"~^/doc/borges/1977-borges$" "/doc/borges/1977-borges-blindness.pdf";
+"~^/doc/ai/2019-anumanchipalli.*$" "/doc/ai/nn/rnn/2019-anumanchipalli.pdf";
+"~^/doc/2014-smithset.pdf.*$" "/doc/bitcoin/2014-smithset.pdf";
+"~^/doc/1996-kelsky.pdf.*$" "/doc/anime/1996-kelsky.pdf";
+"~^/doc/1986-goode.pdf.*$" "/doc/psychology/spaced-repetition/1986-goode.pdf";
+"~^/dalle-2.*$" "https://openai.com/dall-e-2/";
+"~^/conversation/elaine_pagels-the-politics-of-christianity.*$" "https://www.edge.org/3rd_culture/pagels03/pagels_index.html";
+"~^/Catnip-surveys.*$" "/catnip-survey";
+"~^/blog$" "/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -15330,6 +15355,36 @@
 "~^/Idx8.*$"  "/static/404";
 "~^/ggongbak.com.*$"  "/static/404";
 "~^/176.9.41.242:873.*$"  "/static/404";
+"~^/x\.txt.*$"  "/static/404";
+"~^/.*\~\.aspx.*.*$"  "/static/404";
+"~^/wp.*$"  "/static/404";
+"~^/test.*$"  "/static/404";
+"~^/pgslotbet..*$"  "/static/404";
+"~^/.*surf-smart-vpn%.*$"  "/static/404";
+"~^/haskell/miamitv..*$"  "/static/404";
+"~^/foxymassage.*$"  "/static/404";
+"~^/wiki.somaliren.org.so.*$"  "/static/404";
+"~^/wI3j.*$"  "/static/404";
+"~^/ulwxgu8x.*$"  "/static/404";
+"~^/smartsecret.*$"  "/static/404";
+"~^/searchtv..*$"  "/static/404";
+"~^/samnow..*$"  "/static/404";
+"~^/pornxvxx..*$"  "/static/404";
+"~^/office.*$"  "/static/404";
+"~^/.*/malanaz.com%.*$"  "/static/404";
+"~^/magic.ly/.*$"  "/static/404";
+"~^/lakcheria..*$"  "/static/404";
+"~^/jokerslotvip.*$"  "/static/404";
+"~^/fosterparentnet..*$"  "/static/404";
+"~^/ewr1.vultrobjects.*$"  "/static/404";
+"~^/entrepreneursbreak.*$"  "/static/404";
+"~^/EcgM.*$"  "/static/404";
+"~^/doc/www/Kidslot77.*$"  "/static/404";
+"~^/Cuo6.*$"  "/static/404";
+"~^/concretecontractorspuntagordafl.*$"  "/static/404";
+"~^/ccx/.*$"  "/static/404";
+"~^/biotree.vercel.*$"  "/static/404";
+"~^/9lvA.*$"  "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
