--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -5062,3 +5062,23 @@ default "";
 "~^/static/build/gwsed$" "/static/build/gwsed.sh";
 "~^/img/icon/swisspiralroll-stretch.svg.*$" "/img/icon/swissspiralroll.svg";
 "~^/img/icon/swisspiralroll.svg" "/img/icon/swissspiralroll.svg";
+"~^/doc/statistics/bias/2020-voekl.pdf.*$" "/doc/statistics/bias/animal/2020-voekl.pdf";
+"~^/doc/statistics/bias/1967-vesell.pdf.*$" "/doc/statistics/bias/animal/1967-vesell.pdf";
+"~^/doc/statistics/bias/1981-lagakos.pdf.*$" "/doc/statistics/bias/animal/1981-lagakos.pdf";
+"~^/doc/statistics/bias/2015-gaukler.pdf.*$" "/doc/statistics/bias/animal/2015-gaukler.pdf";
+"~^/doc/statistics/meta-analysis/1970-schein.pdf.*$" "/doc/statistics/bias/animal/1970-schein.pdf";
+"~^/doc/statistics/meta-analysis/1986-wilbourn.pdf.*$" "/doc/statistics/bias/animal/1986-wilbourn.pdf";
+"~^/doc/statistics/meta-analysis/2000-olson.pdf.*$" "/doc/statistics/bias/animal/2000-olson.pdf";
+"~^/doc/statistics/meta-analysis/2002-ikonomidou.pdf.*$" "/doc/statistics/bias/animal/2002-ikonomidou.pdf";
+"~^/doc/statistics/meta-analysis/2002-sandercock.pdf.*$" "/doc/statistics/bias/animal/2002-sandercock.pdf";
+"~^/doc/statistics/meta-analysis/2003-lee.pdf.*$" "/doc/statistics/bias/animal/2003-lee.pdf";
+"~^/doc/statistics/meta-analysis/2004-greaves.pdf.*$" "/doc/statistics/bias/animal/2004-greaves.pdf";
+"~^/doc/statistics/meta-analysis/2005-macleod-2.pdf.*$" "/doc/statistics/bias/animal/2005-macleod-2.pdf";
+"~^/doc/statistics/meta-analysis/2005-macleod.pdf.*$" "/doc/statistics/bias/animal/2005-macleod.pdf";
+"~^/doc/statistics/meta-analysis/2006-hackam.pdf.*$" "/doc/statistics/bias/animal/2006-hackam.pdf";
+"~^/doc/statistics/meta-analysis/2006-peters.pdf.*$" "/doc/statistics/bias/animal/2006-peters.pdf";
+"~^/doc/statistics/meta-analysis/2007-dixit.pdf.*$" "/doc/statistics/bias/animal/2007-dixit.pdf";
+"~^/doc/statistics/meta-analysis/2007-ocollins.pdf.*$" "/doc/statistics/bias/animal/2007-ocollins.pdf";
+"~^/doc/statistics/meta-analysis/2007-sena.pdf.*$" "/doc/statistics/bias/animal/2007-sena.pdf";
+"~^/doc/statistics/meta-analysis/2008-whiteside.pdf.*$" "/doc/statistics/bias/animal/2008-whiteside.pdf";
+"~^/doc/statistics/meta-analysis/2010-vesterinen.pdf.*$" "/doc/statistics/bias/animal/2010-vesterinen.pdf";
