--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -210,7 +210,7 @@
 "~^/doc/1955-abramson.pdf%5C.*$" "/doc/1955-abramson.pdf";
 "~^/doc/1990-wiklund-a.pdf$" "/doc/1990-wiklund-a.pdf";
 "~^/doc/1990-wiklund-b.pdf$" "/doc/1990-wiklund-b.pdf";
-"~^/doc/2004-okada.*$" "/doc/2004-okada.*";
+"~^/doc/2004-okada.*$" "/doc/anime/eva/little-boy/2004-okada";
 "~^/Anime-reviews/docs/2010-crc$" "/doc/2010-crc";
 "~^/doc/advertising/0.9$" "/doc/advertising/index";
 "~^/doc/ai/19621968$" "/doc/ai/";
@@ -8971,11 +8971,11 @@
 "~^/static/css/dark-mode.css.html.html$" "/static/css/dark-mode.css.html";
 "~^//static/css/default.css/.php$"  "/static/css/default.css";
 "~^/default.css$" "/static/css/default.css";
-"~^/[a-zA-Z]+/static/css/default.css.*$" "/static/css/default.css.*";
+"~^/[a-zA-Z]+/static/css/default.css.*$" "/static/css/default.css";
 "~^/static/css/default.css.html.html$" "/static/css/default.css.html";
 "~^/static/css/default$" "/static/css/default.hs";
 "~^/drop-caps-de-zs.css$" "/static/css/fonts.css";
-"~^/[a-zA-Z]+/static/css/fonts.css.*$" "/static/css/fonts.css.*";
+"~^/[a-zA-Z]+/static/css/fonts.css.*$" "/static/css/fonts.css";
 "~^/static/css/fonts.css.html.html$" "/static/css/fonts.css.html";
 "~^/static/css/fonts-versioned.css.html.*$" "/static/css/fonts-VERSIONED.css.html";
 "~^/static/css/colors.css$" "/static/css/include/colors.css";
@@ -8987,7 +8987,7 @@
 "~^/initial.css$" "/static/css/include/initial.css";
 "~^/static/css/initial.css.html.*$" "/static/css/include/initial.css.html";
 "~^/links.css$" "/static/css/links.css";
-"~^/[a-zA-Z]+/static/css/links.css.*$" "/static/css/links.css.*";
+"~^/[a-zA-Z]+/static/css/links.css.*$" "/static/css/links.css";
 "~^/static/css/links.css.html.html$" "/static/css/links.css.html";
 "~^/static/css/image-focus.css.*$" "/static/css/old/image-focus.css";
 "~^/static/FontAwesome.css.*$" "/static/css/other/FontAwesome.css";
@@ -15356,7 +15356,7 @@
 "~^/ggongbak.com.*$"  "/static/404";
 "~^/176.9.41.242:873.*$"  "/static/404";
 "~^/x\.txt.*$"  "/static/404";
-"~^/.*\~\.aspx.*.*$"  "/static/404";
+"~^/.*\~\.aspx.*$"  "/static/404";
 "~^/wp.*$"  "/static/404";
 "~^/test.*$"  "/static/404";
 "~^/pgslotbet..*$"  "/static/404";
