--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -5082,3 +5082,9 @@ default "";
 "~^/doc/statistics/meta-analysis/2007-sena.pdf.*$" "/doc/statistics/bias/animal/2007-sena.pdf";
 "~^/doc/statistics/meta-analysis/2008-whiteside.pdf.*$" "/doc/statistics/bias/animal/2008-whiteside.pdf";
 "~^/doc/statistics/meta-analysis/2010-vesterinen.pdf.*$" "/doc/statistics/bias/animal/2010-vesterinen.pdf";
+"~^/doc/psychology/cognitive-bias/2012-stoet.pdf.*$" "/doc/psychology/cognitive-bias/stereotype-threat/2012-stoet.pdf";
+"~^/doc/psychology/cognitive-bias/2015-flore.pdf.*$" "/doc/psychology/cognitive-bias/stereotype-threat/2015-flore.pdf";
+"~^/doc/psychology/cognitive-bias/2016-finnigan.pdf.*$" "/doc/psychology/cognitive-bias/stereotype-threat/2016-finnigan.pdf";
+"~^/doc/psychology/cognitive-bias/2017-zigerell.pdf.*$" "/doc/psychology/cognitive-bias/stereotype-threat/2017-zigerell.pdf";
+"~^/doc/psychology/cognitive-bias/2019-shewach.pdf.*$" "/doc/psychology/cognitive-bias/stereotype-threat/2019-shewach.pdf";
+"~^/doc/psychology/2021-warne.pdf.*$" "/doc/psychology/cognitive-bias/stereotype-threat/2021-warne.pdf";
