--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -37,6 +37,10 @@ server {
 
      location / {
 
+     limit_except GET { # block scanners/botnets from spamming POST and other garbage
+                  deny  all;
+                  }
+
         # for linkArchive.sh/LinkArchive.hs: ensure that no crawlers pick up my mirrors, to reduce DMCA risk.
         location /doc/www/               { add_header X-Robots-Tag "none, nosnippet, noarchive, nocache"; ssi off; }
         # repeat robots.txt's major rules, because Google Search appears to ignore it:
@@ -97,10 +101,25 @@ server {
 
         # begin redirect rewrites: for cases where a more powerful regexp match-and-replace is required
 
-        ## experiment with stripping query parameters '?foo' completely in general:
-        rewrite ^/(?<old>[a-rt-z][a-su-z][b-z][a-su-z][a-hj-z][a-bd-z].*)\?.*$ /$old permanent; # exclude /static/ because of file versioning
-
+        ## stripping query parameters:
         rewrite ^/static/css/fonts\.css(?<version>\?v=[0-9]+)$ /static/css/fonts-VERSIONED.css$version permanent;
+        rewrite ^/(?<old>[a-rt-z][a-su-z][b-z][a-su-z][a-hj-z][a-bd-z].*)\?.*$ /$old permanent; # exclude /static/ because of file versioning
+        rewrite ^/(?<original>.*)\?revision\=.*$ /$original permanent;
+        rewrite ^/(?<original>.*)\?chat$ /$original permanent;
+        rewrite ^/(?<original>.*)\?feedback.*$ /$original permanent;
+        rewrite ^/(?<original>.*)\?[0-9]$ /$original permanent;
+        rewrite ^/(?<original>.*)\?[0-9]$ /$original permanent;
+        rewrite ^/(?<original>.*)\?fbclid\=.*$ /$original permanent;
+        rewrite ^/(?<original>.*)\?utm_.*$ /$original permanent;
+        rewrite ^/(?<original>.*)\?revision=.*$ /$original permanent;
+        rewrite ^/(?<original>.*)\?amp\;\?amp\;.*$ /$original permanent;
+        rewrite ^/(?<original>.*)\?usg=.*$ /$original permanent;
+        rewrite ^/(?<original>.*)\?fbid.*$ /$original permanent;
+        rewrite ^/(?<original>.*)\?fbclid.*$ /$original permanent;
+        rewrite ^/(?<original>.*)\?revision=.*$ /$original permanent;
+        rewrite ^(?<original>.*)\?.*callback=.*from=.*$ /$original permanent;
+        rewrite ^(?<original>.*)\?service=.*$ /$original permanent;
+        rewrite ^(?<original>.*)\?relatedposts_hit=.*$ /$original permanent;
 
         rewrite ^/docs/(?<old>.*)$ /doc/$old permanent;
         rewrite ^/notes/(?<old>.*)$ /note/$old permanent;
@@ -463,6 +482,7 @@ server {
         rewrite ^/doc/catnip/(?<original>.*) /doc/cat/$original permanent;
         rewrite ^/doc/sr/pickard/(?<original>.*) /doc/darknet-markets/william-pickard/$original permanent;
         rewrite ^/doc/lwsurvey/hpmor/(?<original>.*) /doc/lesswrong-survey/hpmor/$original permanent;
+        rewrite ^/doc/histoy/(?<original>.*) /doc/history/$original permanent;
         rewrite ^/doc/rl/armstrong-controlproblem/ /doc/reinforcement-learning/armstrong-controlproblem/$original permanent;
         rewrite ^/(?<original>doc/.*)/index/index.html /$original/index permanent;
         rewrite ^/(?<original>doc/.*)\.pd/f.$ /$original.pdf permanent;
@@ -583,8 +603,9 @@ server {
         rewrite ^/(?<original>doc/www/.*)\.pdf%23(?<anchor>[a-z0-9=]+)$ /$original.pdf\#$anchor permanent;
         rewrite ^/doc/www/(?<original>.*)/\&quot$ https://$original permanent;
 
-        # fix any hits to now-removed external link-bibliographies:
-        rewrite ^/(?<original>.*)-link-bibliography /$original permanent;
+        # fix any hits to now-removed external link-bibliographies (long since obsoleted by 'fragment' popups, see /design-graveyard#popup-annotations):
+        rewrite ^/(?<original>.*)-link-bibliography /$original#link-bibliography permanent;
+        rewrite ^/doc/link-bibliography/(?<original>.*) /$original#link-bibliography permanent;
 
         # fix older annotations pre-interwiki-canonicalization: [a-z] → [A-Z]: (write out by hand because the recommended nginx way is to shell out to Lua in a separate block, and I don't want to mess with such complexity)
         rewrite ^/metadata/annotations/https%3A%2F%2Fen.wikipedia.org%2Fwiki%2Fa(?<suffix>.*)$ /metadata/annotation/https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FA$suffix permanent;
@@ -738,7 +759,7 @@ server {
         rewrite ^/doc/cat/tartarian-honeysuckle/(?<old>.*)$ /doc/cat/tatarian-honeysuckle/$old permanent;
         rewrite ^/(?<old>.*)/null$ /$old/index permanent;
         rewrite ^/(?<old>doc/.*)/null.*$ /$old/index permanent;
-        rewrite ^/(?<old>.*)．$ /$old permanent;
+        rewrite ^/(?<old>.*)%EF%BC%8E.*$ /$old permanent;
 
         rewrite ^/image/otakutalk/(?<old>.*)$ /image/eva/otaku-talk/$old permanent;
         rewrite ^/image/storyofyourlife/(?<old>.*)$ /image/story-of-your-life/$old permanent;
