+; begin partial automation of nginx rewrite rule writing with nginxredirectguesser.hs (Levenshtein distance to guess which existing rewrite rule might be copied)

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -5088,3 +5088,4 @@ default "";
 "~^/doc/psychology/cognitive-bias/2017-zigerell.pdf.*$" "/doc/psychology/cognitive-bias/stereotype-threat/2017-zigerell.pdf";
 "~^/doc/psychology/cognitive-bias/2019-shewach.pdf.*$" "/doc/psychology/cognitive-bias/stereotype-threat/2019-shewach.pdf";
 "~^/doc/psychology/2021-warne.pdf.*$" "/doc/psychology/cognitive-bias/stereotype-threat/2021-warne.pdf";
+"~^/image/eva/2009-rebuild-2.22-1080p%20Bluray%20DTS-HD%20MA%20x264-DECAY.mkv_snapshot_01.51.55_%5B2010.05.28_06.12.44%5D.jpg.*$" "/image/eva/2009-rebuild-2.22-1080p%20bluray%20dts-hd%20ma%20x264-decay.mkv_snapshot_01.51.55_%5b2010.05.28_06.12.44%5d.jpg";
