+; attempt to break slashes in ToCs; reduce W3 HTML checker frequency (few errors); strip redundant CSS from Mathjax hardwiring to remove one W3 lint style warning

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -10666,6 +10666,7 @@
 "~^/doc/1978-mccord.pdf.*$" "/doc/sociology/1978-mccord.pdf";
 "~^/doc/www/s3-us-west-.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf.*$" "/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf";
 "~^/static/index.html.*$" "https://github.com/gwern/gwern.net/";
+"~^/spaed-repetition.*$" "/spaced-repetition";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
