--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -120,7 +120,10 @@ server {
         rewrite ^(?<original>.*)\?.*callback=.*from=.*$ /$original permanent;
         rewrite ^(?<original>.*)\?service=.*$ /$original permanent;
         rewrite ^(?<original>.*)\?relatedposts_hit=.*$ /$original permanent;
+        rewrite ^(?<original>.*)\?ref.*$ /$original permanent;
+        rewrite ^(?<original>.*)\?code.*$ /$original permanent;
 
+        rewrite ^(?<original>.*)ç$ /$original permanent;
         rewrite ^/docs/(?<old>.*)$ /doc/$old permanent;
         rewrite ^/notes/(?<old>.*)$ /note/$old permanent;
         rewrite ^/images/(?<old>.*)$ /image/$old permanent;
@@ -802,6 +805,7 @@ server {
         rewrite ^/(?<old>.*)\.page/$ /$old.page permanent;
         rewrite ^/(?<old>.*)/N/A$ /$old permanent;
         rewrite ^/(?<first>.*)‐(?<second>.*)$ /$first-$second permanent; # convert HYPHEN (which is bad!) to what everyone thinks HYPHEN is, HYPHEN-MINUS
+        rewrite ^/tatic/(?<old>.*)$ /static/$old permanent;
 
         # rewrite LW links like `/posts/5yFRd3cjLpm3Nd6Di/argument-screens-off-authority` (17 character ID):
         rewrite ^(?<old>/posts/[A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9]/[a-z-]+$) https://lesswrong.com$old permanent;
