the great image->doc renaming, and refactoring into actual tags rather than giant image dump directories

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -10730,6 +10730,20 @@
 "~^/chatpgt$" "https://openai.com/blog/chatgpt/";
 "~^/main/.*$" "/index";
 "~^/crypto-currency-index.*$" "/index#cryptobitcoin";
+"~^/doc/dnb/Mj.*$" "/docs/dnb/index";
+"~^/static/index.html$" "https://github.com/gwern/gwern.net/";
+"~^/doc/anime/eva/2004-brutus-hideakianno-interview.*$" "doc/anime/eva/little-boy/2004-okada";
+"~^/doc/nootropic/quanified-self/1998-altman.pdf.*$" "/doc/nootropic/quantified-self/1998-altman.pdf";
+"~^/doc/psychology/1977-bandura-sociallearningtheory.pdf.*$" "http://libgen.rs/book/index.php?md5=D361C0344BEE96F7AB9D34B600C7EEE7";
+"~^/doc/psychology/learning/1977-bandura-sociallearningtheory.pdf.*$" "http://libgen.rs/book/index.php?md5=D361C0344BEE96F7AB9D34B600C7EEE7";
+"~^/GPT-3-zh$" "/gpt-3";
+"~^/GPT3$" "/gpt-3";
+"~^/OpenAI-中文社区$" "/gpt-3";
+"~^/scaling-hypoth$" "/scaling-hypothesis";
+"~^/thescalinghypothesis$" "/scaling-hypothesis";
+"~^/psicology$" "/doc/psychology/index";
+"~^/predictio-market$" "/prediction-market";
+"~^/dnb%C3%99%C2%AA20$" "/dnb-faq";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
