--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -811,6 +811,8 @@ server {
         rewrite ^(?<old>/posts/[A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9]/[a-z-]+$) https://lesswrong.com$old permanent;
         rewrite ^/image/(?<old>.*)-530px.jpg-530px.jpg$ /image/$old-530px.jpg permanent;
 
+        rewrite ^/image/(?<old>.*)$ /doc/$old permanent;
+
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotation/https%3A%2F%2F$original permanent;
         # rewrite ^/metadata/annotations/http\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotation/http%3A%2F%2F$original permanent;
